--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,15 +47,16 @@ dependencies:
   firebase_core: ^0.5.3
   flutter_local_notifications: ^3.0.2
   firebase_crashlytics: ^0.2.4
+
+  # Helper
   device_info: ^1.0.0
-  flutter_app_badger: ^1.1.2
 
   # UI
   cupertino_icons: ^1.0.0
   google_fonts: ^1.1.1
   flutter_easyloading: ^2.0.0
   keyboard_service: ^1.0.3
-  fluttertoast: ^7.1.5
+  fluttertoast: 7.1.6
   lint: ^1.3.0
   timeago: ^2.0.30
   cached_network_image: ^2.5.0
