--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,7 +49,7 @@ dependencies:
   firebase_crashlytics: ^0.2.4
 
   # Helper
-  device_info: ^1.0.0
+  url_launcher: ^5.7.10
 
   # UI
   cupertino_icons: ^1.0.0
